finish collapse logo fixed header

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,14 +24,48 @@
 
 body {
   font-family: Helvetica, Arial, sans-serif;
-  padding: 5px 20px 20px;
+  padding: 0;
 }
 
 header {
+  position: fixed;
+  top: 0;
   width: 100%;
   margin-bottom: 10px;
   border-bottom: 1px dotted #ccc;
+  background: white;
+  padding: 5px 0;
 }
+
+  header a.logos {
+    float: left;
+  }
+
+nav {
+  float: right;
+  width: 80%;
+  text-align: right;
+  margin: 35px 0 0;
+  color: #ccc;
+}
+
+  nav a {
+    display: inline-block;
+    padding: 3px 5px;
+  }
+
+  nav a:link,  nav a:visited {
+    font-family: 'Merriweather', Georgia, serif;
+    font-size: 13px;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #aaa;
+  }
+
+   nav a:hover,  nav a:active {
+    color: #000;
+    text-decoration: none;
+  }
 
 .clearfix:after {
   content: ".";
@@ -47,13 +81,17 @@ header {
   margin: 0 auto;
 }
 
+.content {
+  margin-top: 170px;
+}
+
 h1 {
   font-family: 'Merriweather', Georgia, serif;
   margin: 0 0 10px;
-  text-align: right;
-  color: #999;
-  padding-top: 49px;
+  text-align: center;
+  color: #000;
   font-weight: normal;
+  font-size: 32px;
 }
 
 h2 {
@@ -62,6 +100,7 @@ h2 {
   color: #4c4c4c;
   clear: both;
   font-weight: normal;
+  font-size: 24px;
 }
 
 h3 {
@@ -69,6 +108,15 @@ h3 {
   margin: 20px 0 10px;
   color: #4c4c4c;
   font-weight: normal;
+}
+
+h4 {
+  font-family: 'Merriweather', Georgia, serif;
+  font-weight: normal;
+  color: #aaa;
+  font-size: 16px;
+  text-align: center;
+  margin: 5px 0 60px;
 }
 
 pre {
@@ -91,7 +139,7 @@ table {
 }
 
 tr:nth-child(odd) {
-  background: #efefef;
+  background: #fff;
 }
 
 tr:nth-child(even) {
@@ -100,7 +148,7 @@ tr:nth-child(even) {
 
 th {
   font-family: Georgia, serif;
-  background: #ccc;
+  background: #efefef;
   color: #4c4c4c;
   font-size: 1em;
 }
@@ -216,6 +264,27 @@ a:hover, a:active {
   text-decoration: none;
 }
 
+/****************************** ERRORS ******************************/
+
+#error_explanation {
+  margin: 0 0 20px;
+}
+
+#error_explanation h2 {
+  color: red;
+}
+
+#error_explanation  ul {
+  padding: 10px;
+  background: rgba(255,0,0,.25);
+  border: 1px solid red;
+  list-style: none;
+}
+
+#error_explanation  li {
+  color: #000;
+}
+
 /****************************** MEDIA ******************************/
 
 @media screen and (max-width: 1010px) {
@@ -239,23 +308,34 @@ a:hover, a:active {
   }
 }
 
-/****************************** ERRORS ******************************/
+/****************************** SVG LOGOS ******************************/
 
-#error_explanation {
-  margin: 0 0 20px;
+object, svg {
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
 }
 
-#error_explanation h2 {
-  color: red;
+object#minify {
+   width: 187px;
+   height: 18px;
+   display: none;
+   margin-top: 12px;
+   margin-left: -20px;
+   pointer-events: none;
 }
 
-#error_explanation  ul {
-  padding: 10px;
-  background: rgba(255,0,0,.25);
-  border: 1px solid red;
-  list-style: none;
+object#bigify {
+    width: 140px;
+    height: 89px; 
+    display: block;
+    padding: 5px 3px 3px;
+    display: block;
+    pointer-events: none;
 }
 
-#error_explanation  li {
-  color: #000;
+.header-left a {
+    display: inline-block;
+    width: auto;
+    height: auto;
 }
